--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,8 +8,7 @@ License: GPL-3
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
-Suggests:
-    here
 Depends:
+    here,
     devtools,
     tictoc
