prints commit information if a repository is available

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,8 @@ export(init)
 export(printSession)
 export(setOutput)
 importFrom(devtools,session_info)
+importFrom(git2r,repository)
+importFrom(git2r,revparse_single)
 importFrom(here,here)
 importFrom(pryr,mem_used)
 importFrom(tictoc,tic)
