--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,11 +3,16 @@ Type: Package
 Title: Tidyverse complement
 Version: 0.1.0
 Authors@R: person("Jose", "Alquicira-Hernandez", email = "alquicirajose@gmail.com", role = c("aut", "cre"))
-Description: Set of auxiliary functions for data analysis
-License: GPL-3
+Description: This is a set of auxiliary functions for data analysis.
+License: GPL-3 | file LICENSE
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
 Depends:
     here,
     tictoc
+Imports:
+    devtools,
+    git2r,
+    pryr,
+    methods
