--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,8 @@ importFrom(devtools,session_info)
 importFrom(git2r,repository)
 importFrom(git2r,revparse_single)
 importFrom(here,here)
+importFrom(methods,is)
 importFrom(pryr,mem_used)
 importFrom(tictoc,tic)
 importFrom(tictoc,toc)
+importFrom(utils,capture.output)
