adds helper functions for plotting in ggplot2

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,9 +5,13 @@ export(fin)
 export(formatTime)
 export(glance)
 export(inicio)
+export(no_legend)
 export(print_session)
+export(rotate_x)
 export(set_output)
 importFrom(devtools,session_info)
+importFrom(ggplot2,element_text)
+importFrom(ggplot2,theme)
 importFrom(git2r,repository)
 importFrom(git2r,revparse_single)
 importFrom(here,here)
