formats output from inicio and fin

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,8 +10,10 @@ LazyData: true
 RoxygenNote: 7.1.0
 Depends:
     here,
-    tictoc
 Imports:
+    tictoc,
+    cli,
+    crayon,
     devtools,
     git2r,
     pryr,
