--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,7 +9,10 @@ export(no_legend)
 export(print_session)
 export(rotate_x)
 export(set_output)
+export(theme_pub)
 importFrom(devtools,session_info)
+importFrom(ggplot2,element_blank)
+importFrom(ggplot2,element_line)
 importFrom(ggplot2,element_text)
 importFrom(ggplot2,theme)
 importFrom(git2r,repository)
