updates documentation; adds new functions

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,8 +9,9 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.0
 Depends:
-    here,
+    here
 Imports:
+    patchwork,
     tictoc,
     cli,
     crayon,
