adds shiny module to create analysis template; adds future map + progressr iterator

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,9 +20,30 @@ importFrom(ggplot2,element_text)
 importFrom(ggplot2,theme)
 importFrom(git2r,repository)
 importFrom(git2r,revparse_single)
+importFrom(glue,glue)
 importFrom(here,here)
 importFrom(methods,is)
+importFrom(miniUI,gadgetTitleBar)
+importFrom(miniUI,miniContentPanel)
+importFrom(miniUI,miniPage)
+importFrom(miniUI,miniTabPanel)
+importFrom(miniUI,miniTabstripPanel)
 importFrom(pryr,mem_used)
+importFrom(rstudioapi,insertText)
+importFrom(shiny,br)
+importFrom(shiny,checkboxGroupInput)
+importFrom(shiny,fillRow)
+importFrom(shiny,h1)
+importFrom(shiny,icon)
+importFrom(shiny,observeEvent)
+importFrom(shiny,paneViewer)
+importFrom(shiny,radioButtons)
+importFrom(shiny,reactive)
+importFrom(shiny,reactiveValues)
+importFrom(shiny,runGadget)
+importFrom(shiny,stopApp)
+importFrom(shiny,textAreaInput)
+importFrom(shiny,textInput)
 importFrom(tictoc,tic)
 importFrom(tictoc,toc)
 importFrom(utils,capture.output)
